# kdiff3

./: .clang-format  .clang-tidy  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitlab-nonkde.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  CppCheckSuppressions.txt  INSTALL  NEWS  README  TODO  UBSan.supp  bitbucket-pipelines.yml  configure  gitlab-ci.yml  kdiff3-20130613-202134.kcrash  setup.cfg
diff_ext_for_kdiff3/: .krazy  CMakeLists.txt  Makefile  Makefile_64bit  Messages.sh  README  class_factory.cpp  class_factory.h  diff_ext.cpp  diff_ext.h  diff_ext.pot  diff_ext_de.po  diff_ext_for_kdiff3.def  diff_ext_for_kdiff3.rc  diff_ext_for_kdiff3.vcproj  diff_ext_for_kdiff3_msvc.def  diffextstring.h  server.cpp  server.h
kdiff3/: CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README_WIN.txt  TODO  config-kdiff3.h.cmake  configure  configure.in.in  kdiff3.kdevelop  kdiff3.kdevprj  kdiff3.lsm  kdiff3.spec  subdirs
kdiff3/admin/: Makefile.common  acinclude.m4.in  am_edit  conf.change.pl  configure.in.bot.end  cvs.sh  debianrules  detect-autoconf.pl  do_make  ltcf-cxx.sh
kdiff3/diff_ext_for_kdiff3/: .depend  Makefile  README  class_factory.cpp  diff_ext.cpp  diff_ext.h  diff_ext_de.po  diff_ext_for_kdiff3.def  diff_ext_for_kdiff3.vcproj  server.cpp  server.h
kdiff3/doc/: Makefile.am  README  createpdfdoc  update_doc_dir
kdiff3/kdiff3/: Makefile.am  diff.cpp  diff.h  difftextwindow.cpp  down1arrow.xpm  down2arrow.xpm  downend.xpm  iconB.xpm  iconC.xpm  kdiff3.cpp  kdiff3.desktop  kdiff3.h  kdiff3ui.rc  left2arrow.xpm  leftend.xpm  main.cpp  merger.cpp  merger.h  mergeresultwindow.cpp  optiondialog.cpp  optiondialog.h  pdiff.cpp  right1arrow.xpm  right2arrow.xpm  up1arrow.xpm  up2arrow.xpm
kdiff3/kdiff3fileitemactionplugin/: kdiff3fileitemaction.cpp  kdiff3fileitemaction.desktop  kdiff3fileitemaction.h
kdiff3/kdiff3plugin/: Makefile.am  kdiff3_plugin.desktop  kdiff3plugin.cpp  kdiff3plugin.desktop  kdiff3plugin.h
kdiff3/kdiff3plugin-QT4/: kdiff3_plugin.desktop  kdiff3plugin.cpp  kdiff3plugin.desktop
kdiff3/po/: CMakeLists.txt  CMakeLists_xx.txt  README  ar.po  az.po  bg.po  br.po  ca.po  create_qm_files  createqm  cs.po  cvsgetpo  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fr.po  ga.po  gl.po  hi.po  hu.po  is.po  it.po  ja.po  ka.po  kdiff3.pot  kdiff3plugin.pot  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  (+9 more)
kdiff3/src/: Makefile.am  Makefile.qt  Makefile.win_qt230  ccInstHelper.cpp  common.cpp  common.h  diff.cpp  diff.h  difftextwindow.cpp  difftextwindow.h  directorymergewindow.cpp  directorymergewindow.h  fileaccess.cpp  fileaccess.h  gnudiff_analyze.cpp  gnudiff_diff.h  gnudiff_io.cpp  gnudiff_system.h  gnudiff_xalloc.h  gnudiff_xmalloc.cpp  kdiff3.bat  kdiff3.cpp  kdiff3.desktop  kdiff3.h  kdiff3.lsm  kdiff3.nsi  kdiff3.pro  kdiff3.rc  kdiff3_part.cpp  kdiff3_part.h  kdiff3_part.rc  kdiff3_shell.cpp  kdiff3_shell.h  kdiff3_shell.rc  kdiff3_tmake.pro  kdiff3part.desktop  main.cpp  merger.cpp  merger.h  mergeresultwindow.cpp  (+8 more)
kdiff3/src-QT4/: CMakeLists.txt  Makefile.qt  ccInstHelper.cpp  common.cpp  common.h  diff.cpp  diff.h  difftextwindow.cpp  difftextwindow.h  directorymergewindow.cpp  directorymergewindow.h  directorymergewindow_old.cpp  directorymergewindow_old.h  fileaccess.cpp  fileaccess.h  gnudiff_analyze.cpp  gnudiff_diff.h  gnudiff_io.cpp  gnudiff_system.h  gnudiff_xmalloc.cpp  guiutils.h  kdiff3.cpp  kdiff3.desktop  kdiff3.h  kdiff3.pro  kdiff3_part.cpp  kdiff3_part.h  kdiff3_shell.cpp  kdiff3_shell.h  kdiff3os2.rc  kdiff3part.desktop  main.cpp  merger.cpp  mergeresultwindow.cpp  mergeresultwindow.h  optiondialog.cpp  optiondialog.h  options.h  pdiff.cpp  progress.cpp  (+6 more)
kdiff3/test/: alignmenttest.cpp  fakekdiff3_part.cpp  fakeoptiondialog.cpp  fakeprogressproxy.cpp
kdiff3/windows_installer/: README_WIN.txt  VERSION.NSI  diff3_cmd.bat  kdiff3.nsi
kdiff3fileitemactionplugin/: CMakeLists.txt  Messages.sh  kdiff3fileitemaction.cpp  kdiff3fileitemaction.desktop  kdiff3fileitemaction.h  kdiff3fileitemaction.json
kdiff3plugin/: CMakeLists.txt  Messages.sh  kdiff3plugin.cpp  kdiff3plugin.desktop  kdiff3plugin.h
po/: CMakeLists.txt  create_qm_files  kdiff3.pot  update_po_dir
po/ar/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/ast/: diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/bg/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/br/: CMakeLists.txt  kdiff3.po
po/bs/: CMakeLists.txt  kdiff3.po  kdiff3fileitemactionplugin.po  kdiff3plugin.po
po/ca/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po  kdiff3plugin.po
po/ca@valencia/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/cs/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/cy/: CMakeLists.txt  kdiff3.po
po/da/: CMakeLists.txt  kdiff3.po  kdiff3fileitemactionplugin.po
po/de/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po  kdiff3plugin.po
po/el/: diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/en_GB/: diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po
po/eo/: CMakeLists.txt  diff_ext.po  kdiff3.po  kdiff3fileitemactionplugin.po  kdiff3plugin.po
po/es/: CMakeLists.txt  (+3 more)
src/: CMakeLists.txt  CommentParser.cpp  CommentParser.h  CompositeIgnoreList.cpp  CompositeIgnoreList.h  ConfigValueMap.h  CvsIgnoreList.cpp  CvsIgnoreList.h  DefaultFileAccessJobHandler.cpp  DefaultFileAccessJobHandler.h  DirectoryInfo.cpp  DirectoryInfo.h  DirectoryList.h  EncodedData.h  EncodedDataStream.h  FileAccessJobHandler.cpp  FileAccessJobHandler.h  FileNameLineEdit.cpp  FileNameLineEdit.h  FontChooser.ui  GitIgnoreList.cpp  GitIgnoreList.h  IgnoreList.cpp  IgnoreList.h  LineRef.h  Logging.cpp  Logging.h  MacOSXBundleInfo.plist.in  MergeEditLine.cpp  MergeEditLine.h  MergeFileInfos.cpp  MergeFileInfos.h  Messages.sh  OptionItems.h  Options.cpp  Overview.cpp  Overview.h  PixMapUtils.cpp  PixMapUtils.h  ProgressProxy.cpp  (+76 more)
(+443 files in other folders)
